# Campus-Connect

./: progress_log.md
backend/: .gitignore  alembic.ini  progress_log.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07877c28c3b8_initial_migration_student_and_professor_.py  0e81cb71a639_schema_with_fixed_uuid_types.py  34d70ca1c89c_initial_migration_for_postgres.py  39abd2bfef29_initial_migration.py  b86de8bb8b46_add_professorratings_model.py  cbc4fe2f173d_add_one_to_one_relationship_between_.py  d14e7a1e0057_add_channel_related_models.py  d4a299d03c9e_add_channel_related_models_v2.py  d75f11537a84_add_channel_tables.py
backend/app/: database.py  main.py
backend/app/models/: __init__.py  channel.py  feed.py  resources.py  user.py
backend/app/repository/: __init__.py  channel_repository.py  feed_repository.py  feedback_repository.py  profile_repository.py  resource_repository.py  user_repository.py
backend/app/routers/: auth.py  channel.py  channel_router.py  common.py  feed.py  feedback.py  professor.py  profile.py  student.py  user_auth.py  users.py
backend/app/schemas/: __init__.py  channel_schema.py  feed_schema.py  feedbackSchema.py  profile_schema.py  resource_schema.py  user_schema.py
backend/app/services/: __init__.py  auth_service.py  channel_service.py  feed_service.py  profile_service.py  resource_service.py  resume_analyzer.py
backend/app/utils/: __init__.py  auth.py  password_hash.py  rate_limiter.py
backend/app/websocket/: channel_websocket.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  (+2 more)
(+65 files in other folders)
